<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bttn_upload_recipie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/add"
        android:layout_marginEnd="20dp"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/addrecprogress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toStartOf="@+id/bttn_upload_recipie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bttn_upload_recipie">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_addRecipiImage"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_baseline_insert_photo_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/et_rec_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/title_here"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#8E7E7E"
                android:theme="@style/AppTheme" />


            <EditText
                android:id="@+id/et_rec_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/category_here"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#8E7E7E"
                android:theme="@style/AppTheme" />

            <EditText
                android:id="@+id/et_rec_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/require_time_here"
                android:inputType="text"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#8E7E7E"
                android:theme="@style/AppTheme" />


            <EditText
                android:id="@+id/et_rec_instruction"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/border_instruction"
                android:gravity="top"
                android:hint="@string/add_instructions"
                android:inputType="textMultiLine"
                android:maxLines="30"
                android:padding="15dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#8E7E7E"
                android:theme="@style/AppTheme" />


            <EditText
                android:id="@+id/et_rec_notes"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/border_instruction"
                android:gravity="top"
                android:hint="add notes"
                android:inputType="textMultiLine"
                android:maxLines="30"
                android:padding="15dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#8E7E7E"
                android:theme="@style/AppTheme" />


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>