<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/main_cuisin_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:fontFamily="@font/metro"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="#000">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/iv_back_from_chathistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metro"
                android:text="@string/cuisin_name"
                android:id="@+id/tv_cuisinname"
                android:textColor="@color/colorPrimary"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.MaterialToolbar>



    <ImageView
        android:id="@+id/iv_addRecFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_baseline_favorite__red24"
        app:layout_constraintBottom_toTopOf="@+id/iv_detailImage"
        app:layout_constraintEnd_toEndOf="@+id/main_cuisin_toolbar"
        app:layout_constraintTop_toTopOf="@+id/main_cuisin_toolbar" />


    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:src="@drawable/dish"
        android:id="@+id/iv_detailImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_cuisin_toolbar" />

    <TextView
        android:id="@+id/tv_detail_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/time_require_35_minutes"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="@font/metro"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_detailImage"
        app:layout_constraintStart_toStartOf="@+id/iv_detailImage"
        app:layout_constraintTop_toBottomOf="@+id/iv_detailImage" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_time">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_detail_dummy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metro"
                android:text="@string/recipie"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_time" />

            <TextView
                    android:id="@+id/tv_details_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/metro"
                    android:text="@string/instructions_here" />





            <TextView
                android:id="@+id/tv_detail_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metro"
                android:text="Notes"
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:visibility="gone"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_time" />

               <TextView
                    android:id="@+id/tv_details_notes"
                    android:layout_width="match_parent"
                   android:layout_marginStart="16dp"
                   android:layout_marginEnd="16dp"
                   android:layout_marginTop="8dp"
                   android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/metro"
                    android:text="@string/notes_here" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:layout_marginStart="8dp"
                    android:hint="@string/add_comments"
                    android:layout_marginEnd="8dp"
                    android:padding="10dp"
                    android:background="@drawable/border_search"
                    android:inputType="text"
                    android:textColorHint="#8E7E7E"
                    android:theme="@style/AppTheme"
                    />

                <ImageView
                    android:id="@+id/btn_cmmnt_send"
                    android:layout_width="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_baseline_send_24" />


            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_comments"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btn_cmmnt_send"
                app:layout_constraintStart_toStartOf="@+id/et_comments"
                app:layout_constraintTop_toBottomOf="@+id/et_comments" />

            <ProgressBar
                android:id="@+id/comment_progressBar"
                style="?android:attr/progressBarStyle"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:indeterminateTint="@color/colorPrimaryDark"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/rv_comments"
                app:layout_constraintEnd_toEndOf="@+id/rv_comments"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rv_comments" />


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>