<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/register_lottieAnimationView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/splash" />

    <androidx.cardview.widget.CardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:backgroundTint="@color/colorAccent"
        android:padding="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81"
        tools:layout_editor_absoluteX="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">


            <EditText
                android:id="@+id/etregusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/border_search"
                android:fontFamily="@font/metro"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="13dp"
                android:textColor="#000"
                android:theme="@style/AppTheme"
                tools:Ignore="AutoFill" />

            <EditText
                android:id="@+id/etregemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etregusername"
                android:layout_marginStart="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/border_search"
                android:fontFamily="@font/metro"
                android:hint="@string/e_mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="13dp"
                android:textColor="#000"
                android:theme="@style/AppTheme"
                tools:Ignore="AutoFill" />

            <EditText
                android:id="@+id/etregpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etregemail"
                android:layout_marginStart="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/border_search"
                android:fontFamily="@font/metro"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="13dp"
                android:textColor="#000"
                android:theme="@style/AppTheme"
                tools:Ignore="AutoFill" />

            <Button
                android:id="@+id/btnregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etregpassword"
                android:layout_marginStart="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/metro"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="19sp" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>


    <ProgressBar
        android:id="@+id/registerprogress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        android:indeterminateTint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/tv_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#000"
        android:fontFamily="@font/metro"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
</androidx.constraintlayout.widget.ConstraintLayout>